modify style collapses bug when sorting

--- a/stanzas/pagination-table/style.scss
+++ b/stanzas/pagination-table/style.scss
@@ -120,6 +120,7 @@
     }
     > .tableWrapper {
       overflow: auto;
+      min-height: 430px;
       background-color: var(--togostanza-background-color);
       > table {
         width: 100%;
